# Dragons

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt
app/: __init__.py  database.py  database.sqlite  models.py  views.py
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  database.py  models.py  views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.css  index.js
frontend/src/components/: Character.js  Feat.js  FeatList.js  Header.js  Initiative.js  LandingPage.js  Page404.js  Spell.js  SpellList.js  WorldMap.js
frontend/src/data/: feats.js  spells_phb.js  spells_scag.js  spells_tce.js
frontend/src/util/: SpellUtils.js  SpellUtils.test.js  TextUtils.js  TextUtils.test.js
public/: manifest.json
src/: index.js
src/components/: Header.js  Initiative.js  LandingPage.js  Spell.js  SpellList.js
src/data/: spells.js  spells_xge.js
